[gd_scene load_steps=12 format=2]

[ext_resource path="res://Scripts/UI.gd" type="Script" id=1]
[ext_resource path="res://Assets/Backgrounds/TetrisBackground.png" type="Texture" id=2]
[ext_resource path="res://Assets/Fonts/FREELAH.otf" type="DynamicFontData" id=3]
[ext_resource path="res://Assets/Fonts/LCD14.otf" type="DynamicFontData" id=4]
[ext_resource path="res://Assets/UI/tetris_pause.png" type="Texture" id=5]
[ext_resource path="res://Assets/UI/tetris_restart.png" type="Texture" id=6]
[ext_resource path="res://Assets/UI/tetris_menu.png" type="Texture" id=7]

[sub_resource type="DynamicFont" id=1]
size = 70
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 60
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 70
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 70
outline_size = 2
outline_color = Color( 0.145098, 0.145098, 0.164706, 1 )
font_data = ExtResource( 3 )

[node name="UI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="PauseCover" type="TextureRect" parent="."]
visible = false
margin_right = 680.0
margin_bottom = 920.0
texture = ExtResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 440.0
margin_top = 20.0
margin_right = 660.0
margin_bottom = 908.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 220.0
margin_bottom = 851.0
size_flags_vertical = 2
custom_constants/separation = 4
alignment = 1

[node name="NextShape" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 220.0
margin_bottom = 220.0
rect_min_size = Vector2( 220, 220 )
custom_constants/separation = 10

[node name="Panel" type="Panel" parent="MarginContainer/VBoxContainer/NextShape"]
visible = false
margin_right = 220.0
margin_bottom = 240.0
rect_min_size = Vector2( 220, 240 )
size_flags_horizontal = 4

[node name="SpawnPos" type="Position2D" parent="MarginContainer/VBoxContainer/NextShape/Panel"]
position = Vector2( 110, 160 )

[node name="LineTracker" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 224.0
margin_right = 220.0
margin_bottom = 599.0
rect_min_size = Vector2( 220, 355 )
size_flags_vertical = 0
custom_constants/separation = 0

[node name="Lines" type="Label" parent="MarginContainer/VBoxContainer/LineTracker"]
margin_right = 220.0
margin_bottom = 74.0
rect_min_size = Vector2( 0, 74 )
size_flags_vertical = 0
size_flags_stretch_ratio = 0.8
custom_fonts/font = SubResource( 1 )
text = "Lines"
align = 1
valign = 2

[node name="Score" type="Label" parent="MarginContainer/VBoxContainer/LineTracker"]
margin_top = 74.0
margin_right = 220.0
margin_bottom = 158.0
rect_min_size = Vector2( 0, 84 )
size_flags_vertical = 0
custom_fonts/font = SubResource( 2 )
custom_constants/shadow_offset_y = 0
text = "0000"
align = 1

[node name="MostLines" type="Label" parent="MarginContainer/VBoxContainer/LineTracker"]
margin_top = 158.0
margin_right = 220.0
margin_bottom = 291.0
rect_min_size = Vector2( 0, 133 )
size_flags_vertical = 0
custom_fonts/font = SubResource( 3 )
text = "Most
Lines"
align = 1
valign = 2

[node name="Highscore" type="Label" parent="MarginContainer/VBoxContainer/LineTracker"]
margin_top = 291.0
margin_right = 220.0
margin_bottom = 375.0
rect_min_size = Vector2( 0, 84 )
size_flags_vertical = 0
custom_fonts/font = SubResource( 2 )
custom_constants/shadow_offset_y = 0
text = "0000"
align = 1

[node name="Buttons" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_left = 20.0
margin_top = 603.0
margin_right = 200.0
margin_bottom = 851.0
rect_min_size = Vector2( 0, 200 )
size_flags_horizontal = 4

[node name="Pause" type="TextureButton" parent="MarginContainer/VBoxContainer/Buttons"]
margin_right = 180.0
margin_bottom = 80.0
rect_min_size = Vector2( 0, 80 )
focus_mode = 0
size_flags_horizontal = 0
size_flags_vertical = 0
enabled_focus_mode = 0
texture_normal = ExtResource( 5 )

[node name="PauseTimer" type="Timer" parent="MarginContainer/VBoxContainer/Buttons/Pause"]
wait_time = 1.04
one_shot = true

[node name="Restart" type="TextureButton" parent="MarginContainer/VBoxContainer/Buttons"]
margin_top = 84.0
margin_right = 180.0
margin_bottom = 164.0
rect_min_size = Vector2( 180, 80 )
focus_mode = 0
size_flags_horizontal = 0
size_flags_vertical = 0
enabled_focus_mode = 0
texture_normal = ExtResource( 6 )

[node name="MainMenu" type="TextureButton" parent="MarginContainer/VBoxContainer/Buttons"]
margin_top = 168.0
margin_right = 180.0
margin_bottom = 248.0
rect_min_size = Vector2( 180, 80 )
focus_mode = 0
size_flags_horizontal = 0
size_flags_vertical = 0
enabled_focus_mode = 0
texture_normal = ExtResource( 7 )

[node name="GameOverLabel" type="Label" parent="."]
visible = false
margin_left = 40.0
margin_top = 45.0
margin_right = 402.0
margin_bottom = 101.0
custom_fonts/font = SubResource( 4 )
text = "Game over"
[connection signal="pressed" from="MarginContainer/VBoxContainer/Buttons/Pause" to="." method="_on_Pause_pressed"]
[connection signal="timeout" from="MarginContainer/VBoxContainer/Buttons/Pause/PauseTimer" to="." method="_on_PauseTimer_timeout"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Buttons/Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Buttons/MainMenu" to="." method="_on_MainMenu_pressed"]
